--- a/app/src/main/res/layout/activity_kabaddi.xml
+++ b/app/src/main/res/layout/activity_kabaddi.xml
@@ -1,19 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/kabaddi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".KabaddiActivity">
 
+    <!-- AppBar -->
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/purple"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="KabaddiKounter"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+    </androidx.appcompat.widget.Toolbar>
+
+    <!-- Team A -->
+
     <TextView
+        android:id="@+id/team_a_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Team A"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/team_b_label"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.314" />
+
+    <TextView
+        android:id="@+id/team_a_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/team_a_label"
+        app:layout_constraintStart_toStartOf="@id/team_a_label"
+        app:layout_constraintEnd_toEndOf="@id/team_a_label"/>
+
+    <Button
+        android:id="@+id/button_team_a_plus1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+1"
+        android:backgroundTint="@color/purple"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/team_a_score"
+        app:layout_constraintStart_toStartOf="@id/team_a_score"
+        app:layout_constraintEnd_toEndOf="@id/team_a_score"/>
+
+    <Button
+        android:id="@+id/button_team_a_plus2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+2"
+        android:backgroundTint="@color/purple"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/button_team_a_plus1"
+        app:layout_constraintStart_toStartOf="@id/button_team_a_plus1"
+        app:layout_constraintEnd_toEndOf="@id/button_team_a_plus1"/>
+
+    <!-- Divider -->
+    <View
+        android:layout_width="1dp"
+        android:layout_height="140dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/team_a_label"
+        app:layout_constraintBottom_toBottomOf="@id/button_team_a_plus2"
+        app:layout_constraintStart_toEndOf="@id/team_a_score"
+        app:layout_constraintEnd_toStartOf="@id/team_b_score"/>
+
+    <!-- Team B -->
+    <TextView
+        android:id="@+id/team_b_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Team B"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/team_a_label"
+        app:layout_constraintTop_toTopOf="@id/team_a_label" />
+
+    <TextView
+        android:id="@+id/team_b_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/team_b_label"
+        app:layout_constraintStart_toStartOf="@id/team_b_label"
+        app:layout_constraintEnd_toEndOf="@id/team_b_label"/>
+
+    <Button
+        android:id="@+id/button_team_b_plus1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+1"
+        android:backgroundTint="@color/purple"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/team_b_score"
+        app:layout_constraintStart_toStartOf="@id/team_b_score"
+        app:layout_constraintEnd_toEndOf="@id/team_b_score"/>
+
+    <Button
+        android:id="@+id/button_team_b_plus2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+2"
+        android:backgroundTint="@color/purple"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/button_team_b_plus1"
+        app:layout_constraintStart_toStartOf="@id/button_team_b_plus1"
+        app:layout_constraintEnd_toEndOf="@id/button_team_b_plus1"/>
+
+    <!-- Reset Button -->
+    <Button
+        android:id="@+id/button_reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/purple"
+        android:text="RESET"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/button_team_a_plus2"
+        app:layout_constraintVertical_bias="0.222" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
