--- a/app/src/main/res/layout/activity_kabaddi.xml
+++ b/app/src/main/res/layout/activity_kabaddi.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
+        <import type="android.view.View"/>
         <variable
             name="scoreViewModel"
             type="com.example.kabaddukounterapp.ScoreViewModel" />
@@ -54,7 +55,7 @@
         android:id="@+id/team_a_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{Integer.toString(scoreViewModel.scoreA)}"
+        android:text='@{Integer.toString(scoreViewModel.scoreA)}'
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/team_a_label"
@@ -151,6 +152,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_team_a_plus2"
         app:layout_constraintVertical_bias="0.222" />
+
+    <TextView
+        android:id="@+id/winner_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@{scoreViewModel.winnerText}"
+        android:textSize="24sp"
+        android:textColor="@android:color/holo_green_light"
+        android:textStyle="bold"
+        android:visibility="@{scoreViewModel.winnerText.isEmpty() ? View.GONE : View.VISIBLE}"
+        app:layout_constraintTop_toBottomOf="@id/button_reset"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
